--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -36,7 +36,10 @@
     "otherModules": [],
     "enableTranslation": true,
     "nativeLanguage": "en",
-    "languages": ["en"],
+    "languages": [
+      "en",
+      "cs"
+    ],
     "blueprints": []
   }
 }
